force-app/main/default/objects/Client_Allocation_Schedule_Subscription__c/Client_Allocation_Schedule_Subscription__c.object-meta.xml
<CustomObject>
    <label>Client Allocation Schedule Subscription</label>
    <nameField>
        <label>Client Allocation Schedule  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Allocation Schedule Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>