force-app/main/default/objects/Client_Allocation_Schedule_Subscription__c/fields/Allocation_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Schedule__c</fullName>
    <description>A master-detail relationship up to allocation schedule</description>
    <label>Allocation Schedule</label>
    <referenceTo>Schedule_Z__c</referenceTo>
    <relationshipLabel>Client Allocation Schedule Subscriptions</relationshipLabel>
    <relationshipName>Client_Allocation_Schedule_Subscriptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>