force-app/main/default/objects/Client_Allocation_Schedule_Subscription__c/fields/Allocation_Schedule_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Schedule_Subscription__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Related to Allocation Schedule Subscription object, populated via code</inlineHelpText>
    <label>Allocation Schedule Subscription</label>
    <referenceTo>Schedule_Z_Subscription__c</referenceTo>
    <relationshipLabel>Client Allocation Schedule Subscriptions</relationshipLabel>
    <relationshipName>Client_Allocation_Schedule_Subscriptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>