force-app/main/default/objects/Client_Allocation_Schedule_Subscription__c/fields/Client_Utility_Account_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Client_Utility_Account_Subscription__c</fullName>
    <description>A master-detail relationship up to Client Utility Account Subscription</description>
    <label>Client Utility Account Subscription</label>
    <referenceTo>Client_Utility_Account_Subscription__c</referenceTo>
    <relationshipLabel>Client Allocation Schedule Subscriptions</relationshipLabel>
    <relationshipName>Client_Allocation_Schedule_Subscriptions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>