force-app/main/default/objects/Client_Allocation_Schedule_Subscription__c/fields/Customer_Subscription_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>Customer_Subscription_kW_DC__c</fullName>
    <formula>Allocation_Schedule_Subscription__r.Customer_Subscription_kW_DC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The kW DC value of the customer&apos;s subscription</inlineHelpText>
    <label>Customer Subscription kW DC</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>