force-app/main/default/objects/Client_Allocation_Schedule_Subscription__c/fields/kW_Allocation__c.field-meta.xml
<CustomField>
    <fullName>kW_Allocation__c</fullName>
    <formula>Allocation_Schedule_Subscription__r.kW_Allocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>kW size based on % subscription on allocation schedule</inlineHelpText>
    <label>kW Allocation</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>