force-app/main/default/objects/Client_Allocation_Schedule_Subscription__c/fields/Percent_Share__c.field-meta.xml
<CustomField>
    <fullName>Percent_Share__c</fullName>
    <formula>Allocation_Schedule_Subscription__r.Percent_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentage value of the customer&apos;s subscription</inlineHelpText>
    <label>Percent Share</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>