force-app/main/default/objects/Client_Allocation_Schedule_Subscription__c/fields/Stop_Credit_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Stop_Credit_Transfer__c</fullName>
    <formula>Allocation_Schedule_Subscription__r.Stop_Credit_Transfer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If checked, Perch is no longer billing due to closed Utility account</inlineHelpText>
    <label>Stop Credit Transfer</label>
    <type>Checkbox</type>
</CustomField>